update resize header function and fixed collapsed nav bar button

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,3 @@
 footer {
 	background-color: #000;
-	height: 20%;
 }
